@@ -10,6 +10,7 @@ lib/Mail/DKIM/Algorithm/Base.pm
 lib/Mail/DKIM/Algorithm/dk_rsa_sha1.pm
 lib/Mail/DKIM/Algorithm/rsa_sha1.pm
 lib/Mail/DKIM/Algorithm/rsa_sha256.pm
+lib/Mail/DKIM/AuthorDomainPolicy.pm
 lib/Mail/DKIM/DNS.pm
 lib/Mail/DKIM/DkimPolicy.pm
 lib/Mail/DKIM/Policy.pm
